fix bugs and complete register
